@@ -1,5 +1,5 @@
 
-  netsed 1.2       (C) 2010-2012  Julien VdG <julien@silicone.homelinux.org>
+  netsed 1.3       (C) 2010-2012  Julien VdG <julien@silicone.homelinux.org>
                    (C) 2015          Alexey Shumkin <alex.crezoff@gmail.com>
   --------------------------------------------------------------------------
 
@@ -125,6 +125,10 @@ General replacement rules syntax is:
    s/pat1/pat2[/-N[:M]][+A:C][/expire]
 
 This will replace all occurrences of pat1 with pat2 in matching packets.
+"-N[:M]" is the deletion rule 'Delete M bytes after Nth byte starting from
+the beginning of the replacement'. M can be omitted and equals 1 by default.
+"+X[:C]" is the addition rule 'Add one byte with the code C after Xth byte starting from
+the beginning of the replacement'. C can be omitted and equals 0 by default.
 An additional parameter (count) can be used to expire rule after 'count'
 successful substitutions for a given connection. Eight-bit characters, 
 including NULL and '/', can be passed using HTTP-alike hex escape 
@@ -136,6 +140,14 @@ Examples:
   's/andrew/mike%00%00' - replace 'andrew' with 'mike\x00\x00'
                           (manually padding to keep original size)
   's/%%/%2f/20'         - replace the 20 first occurence of '%' with '/'
+  's/%FF%AA/%AA%FF/i-12:3'
+  's/%FF%AA/%AA%FF/i/-12:3
+                          - Exchange \xFF and \xAA and delete three bytes after 12th byte
+                            from the beginning of sequence in server's responses
+  's/%FF%AA/%AA%FF/o+11:64'
+  's/%FF%AA/%AA%FF/o/+11:64'
+                          - Exchange \xFF0 and \xAA and add byte with code 64 after 11th byte
+                            from the beginning of sequence in client's requests
 
 Rules are not working on cross-packet boundaries and are evaluated from
 first to last not expired rule.
