@@ -1,3 +1,7 @@
+2015-11-20; netsed 1.3:
+  - new feature from Alexey Shumkin:
+    - Deletion and addition rules.
+
 2013-10-11; netsed 1.2:
   - new feature from Mats Erik Anersson:
     - Direction dependant rules.
